force-app/main/default/objects/Scene__c/Scene__c.object-meta.xml
<CustomObject>
    <label>Scene</label>
    <nameField>
        <label>Scene Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>