force-app/main/default/objects/Scene__c/fields/Interior_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Interior_Exterior__c</fullName>
    <label>Interior/Exterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>