force-app/main/default/objects/Scene__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <referenceTo>Production__c</referenceTo>
    <relationshipLabel>Scenes</relationshipLabel>
    <relationshipName>Scenes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>