force-app/main/default/objects/Scene__c/fields/Scene_Number__c.field-meta.xml
<CustomField>
    <fullName>Scene_Number__c</fullName>
    <label>Scene Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>