force-app/main/default/objects/Scene__c/fields/Script_Location__c.field-meta.xml
<CustomField>
    <fullName>Script_Location__c</fullName>
    <label>Script Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>