force-app/main/default/objects/Scene__c/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <label>Time of Day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>